# thejesuswebsite

./: .dockerignore  .env.example  .gitignore  AGENT_INTEGRATION_PLAN.md  ASK_THE_AGENT.md  Add_Records_Feed_to_System_View.md  CLAUDE.md  Cargo.toml  DATABASE_AUDIT.md  GLOSSARY_PLAN.md  GLOSSARY_RE_ORGANISATION_PLAN.md  INDEX_REDESIGN_PLAN.md  LICENCE  LICENSE  NEWS_FEED_ARCHITECTURE_PLAN.md  PERFORMANCE_REPORT.md  PROJECT_CONTEXT.md  Plan-Fix-ApiResponse-Errors.md  Plan-Fix-Dashboard-JSON-Bug.md  Plan-Refactor-Records-Tabs.md  README.md  SYSTEM_DATA_VIEWER_REFACTOR.js  SYSTEM_DATA_VIEWER_REFACTOR.md  WASM_JSON_REPORT.md  Website_guide.md  activation_plan.md  agent_architecture_update_plan.md  agent_guide.yml  align_dashboard_styling.md  audit_dashboard_columns.md  blog_architecture_update_plan.md  build.py  build.rs  calude.md  challenge_architecture_update_plan.md  clippy.toml  css_refactor_plan.md  dashboard-responsive-plan.md  dashboard_editor_UI_overhaul.md  dashboard_function_coverage_audit.md  (+96 more)
.agent/: eval.md
.claude/: launch.json  settings.local.json
.github/: dependabot.yml
.sqlx/: query-3659a012f0c89d74da053b727ee068a5116eb5e317a903f9402949a778070773.json  query-7e719d7abfe9930de5ed11cdb91fedebc74dcebe64e61b038ead3bbc15e669d0.json  query-b473c761386f1a742ba8492b90cd156a8ed093415f1f4c8765349c68561e1296.json  query-bf53e042f68b42b681586cfd9c17f04eef4b833f344bb3b70e1bcc53ce1c978a.json  query-c2c241d24ca9d5c61bbf8527e89d594b7862d7f0a8417e86c45ec08642cec22b.json
admin/: analytics.html  index.html
api/: TESTING.md  config.js  package-lock.json  package.json  server.js
app/app_core/: Cargo.toml  cargo.toml
app/app_core/src/tools/: mod.rs  system_awareness.rs
app/app_core/src/types/: dtos.rs  mod.rs  traits.rs
app/app_core/src/types/blog_and_news/: blog.rs  mod.rs  news.rs
app/app_core/src/types/contact/: contact.rs  contact_message.rs  mod.rs
app/app_core/src/types/donate/: budget.rs  donor.rs  mod.rs
app/app_core/src/types/essays_and_ranks/: challenge.rs  essay.rs  mod.rs  response.rs  wikipedia.rs
app/app_core/src/types/jesus/: content.rs  map.rs  mod.rs  timeline.rs  type.rs
app/app_core/src/types/record/: mod.rs  record.rs
app/app_core/src/types/search_create_rank/: big_idea.rs  mod.rs  search_domain.rs  search_word.rs  source_and_quote.rs  weights.rs
app/app_core/src/types/system/: bible_verse.rs  bible_verse_parser.rs  context_window.rs  draft_counts.rs  error.rs  id_academic_article.rs  id_geo.rs  id_iaa.rs  id_isbn.rs  id_lgpn.rs  id_manuscript.rs  id_orcid.rs  id_pleiades.rs  json.rs  mcp.rs  meta_research.rs  metadata.rs  mod.rs  page_id.rs  page_views.rs  pdf.rs  picture.rs  pttx.rs  publication_status.rs  publication_year.rs  referral.rs  request.rs  security_log.rs  sequenceid.rs  server_metrics.rs  server_ram.rs  server_storage.rs  source.rs  source_type.rs  token.rs  trace_reasoning.rs  ulid.rs  url.rs  user.rs  user_metrics.rs  (+4 more)
app/app_storage/: Cargo.toml  cargo.toml
app/app_storage/database/: .fuse_hidden00000f4e00000002  schema.sql  seed.sql  thejesuswebsite.db  thejesuswebsite.db-shm  thejesuswebsite.db-wal
app/app_storage/database/migrations/: 002_sources_pipeline.sql
app/app_storage/src/: chroma.rs  lib.rs  manager.rs  sqlite.rs
app/app_ui/: Cargo.toml  cargo.toml
app/app_ui/src/: agent_api.rs  api_agents.rs  api_blog.rs  api_contacts.rs  api_deadlinks.rs  api_donate.rs  api_news.rs  api_records.rs  api_security.rs  api_slide.rs  api_sources.rs  api_spelling.rs  api_spider.rs  api_system.rs  api_tools.rs  api_users.rs  api_weights.rs  api_widgets.rs  auth.rs  lib.rs  login.rs  main.rs  middleware.rs  rate_limit.rs  router.rs  security.rs  server.rs  websocket.rs  ws.rs
assets/: ai-instructions.txt
database/: database.sql  database.sqlite  schema.sql  scoring-export.json  seed.sql
deploy/: nginx-http.conf  nginx-realip.conf  nginx.conf
deployment/: admin.service  deploy.sh  mcp.service  mcp_client_config.example.json  mcp_client_config.json  ssl_renew.sh  thejesuswebsite.service
documentation/: dashboard_refractor.md  data_schema.md  detailed_module_sitemap.md  git_vps.md  guide_security.md  guide_style.md  guide_welcoming_robots.md  high_level_schema.md  implementation_plan.md  module_sitemap.md  simple_module_sitemap.md  site_map.md  style_guide.md  style_mockup.html  vibe_coding_rules.md
frontend/: 404.html  _footer.html  _header.html  _sidebar.html  about.html  blog_feed.html  challenge.html  challenge_academic.html  challenge_popular.html  context.html  evidence.html  histography.html  historgraphy.html  index.html  list_events.html  list_external_sources.html  list_internal_sources.html  list_manuscripts.html  list_miracles.html  list_objects.html  (+21 more)
(+1365 files in other folders)
