[project]
name = "thejesuswebsite"
version = "0.1.0"
description = "A FastAPI backend serving thejesuswebsite.org"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Luke Isham" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "anyio>=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Useful for keeping your code clean locally
line-length = 88
select = ["E", "F", "I"]
