[package]
name    = "app_core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Workspace-managed
serde       = { workspace = true, features = ["derive", "rc"] }
serde_json  = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
ulid        = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
url         = { workspace = true }

# Crate-specific
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
toml = "0.8"
rss = "2"
scraper = "0.19"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2"
anyhow.workspace = true
