[package]
name    = "app_storage"
version.workspace = true
edition.workspace = true

[dependencies]
app_core = { path = "../app_core" }

# Workspace-managed
serde       = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }

# Crate-specific: Storage backends
chromadb = "2.3.0"
sqlx     = { workspace = true }
ulid     = { workspace = true }
