[package]
name    = "app_ui"
version.workspace = true
edition.workspace = true
default-run = "app_ui"

[dependencies]
app_core    = { path = "../app_core" }
app_brain   = { path = "../app_brain" }
app_storage = { path = "../app_storage" }

# Workspace-managed
serde       = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

# Crate-specific: Web server
axum             = { version = "0.7", features = ["ws", "macros"] }
futures          = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http       = { version = "0.5", features = ["fs", "trace", "cors", "timeout"] }
tower            = { version = "0.4", features = ["util"] }
dotenvy          = "0.15"
rand             = "0.8"
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json       = "1"
hmac             = "0.12"
sha2             = "0.10"
hex              = "0.4"
htmd             = "0.1"
scraper          = "0.20"
ulid.workspace = true
serde_urlencoded = "0.7.1"
